# shaft

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.md  README.md  x.sh
.github/workflows/: default.yaml
examples/: main.rs
src/: de.rs  error.rs  lib.rs  read.rs  ser.rs  write.rs
tests/: de.rs  ser.rs
