[package]
name = "shaft"
version = "0.1.0"
edition = "2021"
authors = ["Loky HARK <loky.hark@pm.me>]"
edition = "2021"
description = "A minimal and straightforward binary serde implementation."
readme = "README.md"
repository = "https://github.com/lokyhark/shaft"
license = "MIT"
keywords = ["serde", "binary"]
categories = ["encoding"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }